# AlfaBattle

./: README.md  pyproject.toml
notebooks/: mcc_lstm.ipynb
scripts/: cat_cat_prediction.py  cat_mcc_predicion.py  mcc_mcc_prediction.py
